# delphi

./: .buildinfo  .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG_grfn_spec.html  CMakeLists.txt  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile  Dockerfile.api  GrFN_API.html  MANIFEST.in  Makefile  PETASCE_simple.j.json  PETASCE_simple_lambdas.py  PETPT.json  PETPT_lambdas.py  Pipfile  README.html  README.md  SIR-Gillespie-MS_lambdas.py  SIR-simple_lambdas.py  WHO-csv.py  WHO-excel.py  World-Bank.py  apt.txt  autoF2grfn.py  bmi_config.txt  build_and_run.sh  build_docs.sh  conanfile.txt  config.html  config.json  config.py  crop_yield.json  crop_yield_lambdas.py  (+42 more)
_modules/: index.html
_sources/: CONTRIBUTING.md.txt  GrFN_API.rst.txt  config.md.txt  delphi.GrFN.rst.txt  delphi.apps.CodeExplorer.rst.txt  delphi.apps.rest_api.rst.txt  delphi.apps.rst.txt  delphi.rst.txt  delphi.translators.for2py.rst.txt  delphi.translators.rst.txt  delphi.utils.rst.txt  grfn_index.md.txt  grfn_spec.rst.txt  index.rst.txt  usage.md.txt
apps/: Summary.OUT  WC Hackathon Demo.ipynb  West Coast Hackathon Demo.ipynb  check_OpenMP.cpp  check_multithreading.cpp  cpprestserver.cpp  create_model.cpp  delphi_rest_api.cpp  fitness_assessor.cpp  mat_exp_timer.cpp  omp_hello_world.cpp  pybind_tester_driver.cpp  sandbox_tester.cpp  test_cpp_rest_api.py  timer.cpp
cmake/: FindGraphviz.cmake
cpp_api/: classAnalysisGraph.html  classBadCausemosInputException.html  classBaseStatus.html  classCSVWriter.html  classConcept.html  classConfig.html  classDatabase.html  classEdge.html  classEvent.html  classExperimentStatus.html  classGraphData.html  classIndicator.html  classIndicatorNotFoundException.html  classKDE.html  classLatentVar.html  classLogger.html  classModelStatus.html  classNode.html  classPybindTester.html  classQualitativeDelta.html  classRNG.html  classRV.html  classStatement.html  classTimer.html  classTrainingStatus.html  classTrainingStopper.html  classTran__Mat__Cell.html  class_view_hierarchy.html  define_BaseStatus_8cpp_1a43a45f2f424930c27bfd495204d1a382.html  define_BaseStatus_8cpp_1a9ec3b851adf82bbddae9a21991bb4fdd.html  define_BaseStatus_8cpp_1ac597396b8b15727f3566d30854a60aa7.html  define_ModelStatus_8cpp_1a43a45f2f424930c27bfd495204d1a382.html  dir_lib.html  enum_AnalysisGraph_8hpp_1a3c28e20e6aeae736c41b7ebb0e6e1c01.html  enum_AnalysisGraph_8hpp_1a8591901b2c5a6674da61dca8bb88b9fd.html  enum_AnalysisGraph_8hpp_1aa4ec7a08bda020624a88080a11bb9fc9.html  enum_Edge_8hpp_1a84a045fa4024e050ca8be6d33311a054.html  enum_definitions_8h_1afa0b0a781acd33167168a555b01ac0b5.html  file_lib_AnalysisGraph.hpp.html  file_lib_BaseStatus.cpp.html  (+229 more)
data/: README.md  adjectiveData.tsv  concept_to_indicator_mapping.txt  concept_to_indicator_mapping.yml  config.json  curated_statements.pkl  pi_mtg_demo.pkl  postBuild  sample_indra_statements.pkl  south_sudan_data.csv
delphi/: AnalysisGraph.py  Evaluation.py  __init__.py  __main__.py  api.py  assembly.py  bmi.py  cli.py  core.py  db.py  evaluation.py  evaluation_port.py  execution.py  export.py  inference.py  inspection.py  jupyter_tools.py  manipulation.py  parameterization.py  paths.py  plot_delphi_results_offline.py  plotter.py  quantification.py  random_variables.py  state.py  subgraphs.py  types.py  utils.py  views.py  visualization.py  viz.py
delphi/cpp/: AnalysisGraph.cpp  AnalysisGraph.hpp  AnalysisGraph_wrapper.cpp  CMakeLists.txt  Makefile  kde.hpp  wrapper.cpp
doc/: README.md  develop.py  develop.sh
docs/: '  .buildinfo  .gitignore  AnalysisGraph.rst  AnalysisGraph_API.rst  CHANGELOG_grfn_spec.md  CONTRIBUTING.md  GrFN_API.rst  Makefile  README.md  api.rst  conf.py  config.md  config.rst  dbn_json_spec.rst  delphi.GrFN.rst  delphi.analysis.comparison.rst  delphi.analysis.optimization.rst  delphi.analysis.rst  delphi.analysis.sensitivity.rst  delphi.apps.CodeExplorer.rst  delphi.apps.rest_api.rst  delphi.apps.rst  delphi.html  delphi.icm_api.rst  delphi.program_analysis.autoTranslate.rst  delphi.program_analysis.autoTranslate.scripts.rst  delphi.program_analysis.examples.rst  delphi.program_analysis.rst  delphi.rst  delphi.translators.for2py.rst  delphi.translators.rst  delphi.utils.rst  delphi_database.md  for2py_API.rst  genindex.html  grfn_json.rst  grfn_link_hypothesis.txt  grfn_openapi.html  grfn_openapi.rst  (+22 more)
lib/: .data.cpp.swo  AnalysisGraph.cpp  AnalysisGraph.hpp  AnalysisGraph_wrapper.cpp  BaseStatus.cpp  BaseStatus.hpp  CSVWriter.hpp  Config.cpp  Config.cpp.bak  Config.hpp  Config.hpp.bak  DatabaseHelper.cpp  DatabaseHelper.hpp  DelphiConnect.cpp  DelphiConnect.hpp  DelphiPython.cpp  DiGraph.hpp  Edge.hpp  ExperimentStatus.cpp  ExperimentStatus.hpp  Indicator.cpp  Indicator.hpp  KDE.cpp  KDE.hpp  Logger.cpp  Logger.hpp  ModelStatus.cpp  ModelStatus.hpp  Node.cpp  Node.hpp  PybindTester.hpp  Random_Variables.cpp  Random_Variables.hpp  Timer.h  Timer.hpp  TrainingStatus.cpp  TrainingStatus.cpp.new  TrainingStatus.hpp  TrainingStopper.cpp  TrainingStopper.hpp  (+47 more)
notebooks/: 12-Month Evaluation.ipynb  AutoMATES Demo.ipynb  Delphi-Demo-Notebook.ipynb  PI Meeting 2018 Demo.ipynb  PI Meeting 2018 Demo.md  Program Analysis Kickoff Demo.ipynb  README.md  WC Hackathon Demo.ipynb  WM Oct 2019 evaluation.ipynb  backcasting_demo_notebook.ipynb  backcasting_notebook.ipynb  backcasting_test_notebook.ipynb  clean  clean_and_commit  custom.css  demo.tpl  reference_model_creation.md  synthetic_data_experiment.ipynb  test_notebook.ipynb
program_analysis/: example_analysis.py  printAst.py
scripts/: ECD_comparison.py  Makefile  README.md  WDI_data_processing.py  apnotes.cls  assemble_timer_output.py  benchmarking.py  cli.py  combine_data.py  compare_sa_methods.py  create_delphi_db.py  debugger.py  download_and_clean_FAO_and_WDI_indicator_data.py  download_and_clean_FEWS_NET_data.py  export_entity_groundings.py  f2grfn_standalone.py  fao_data_cleaning.py  grfn_links_to_csv.py  indicator_hierarchy_construction.py  install_boost_from_source.sh  install_cmake_from_source  install_dependencies.sh  (+31 more)
(+1462 files in other folders)
